<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/tip_time"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_store"
            app:layout_constraintBottom_toBottomOf="@id/tilCost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilCost" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCost"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/ivCost"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/cost_of_service"
                android:inputType="numberDecimal"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivServiceQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_service"
            app:layout_constraintBottom_toBottomOf="@id/tvServiceQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvServiceQuestion" />

        <TextView
            android:id="@+id/tvServiceQuestion"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ivServiceQuestion"
            app:layout_constraintTop_toBottomOf="@id/tilCost" />

        <RadioGroup
            android:id="@+id/rgTipOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checkedButton="@id/rb20"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/tilCost"
            app:layout_constraintTop_toBottomOf="@id/tvServiceQuestion">

            <RadioButton
                android:id="@+id/rb20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/rb18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/rb15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay_15" />

        </RadioGroup>

        <ImageView
            android:id="@+id/ivRoundUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_round_up"
            app:layout_constraintBottom_toBottomOf="@id/swtRoundUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/swtRoundUp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swtRoundUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"

            android:checked="true"
            android:text="@string/round_up_tip"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRoundUp"
            app:layout_constraintTop_toBottomOf="@id/rgTipOptions"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/calculate"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swtRoundUp" />

        <TextView
            android:id="@+id/tvResult"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCalculate"
            tools:text="Your result" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
